[package]
name = "asimeow"
version = "0.2.0"
edition = "2021"
description = "A tool for managing macOS Time Machine exclusions for developer's workspaces"
authors = ["mdnmdn"]
license = "MIT"
repository = "https://github.com/mdnmdn/asimeow"
documentation = "https://github.com/mdnmdn/asimeow"
readme = "README.md"
keywords = ["macos", "time-machine", "backup", "developer-tools", "utility"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
exclude = [".github/", ".gitignore", "tests/"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
glob = "0.3"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
dirs = "6.0.0"

[lib]
name = "asimeow"
path = "src/lib.rs"

[[bin]]
name = "asimeow"
path = "src/main.rs"

[[test]]
name = "tests"
path = "tests/mod.rs"
